--- a/flag.html
+++ b/flag.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/Flag.css">
+    <link rel="stylesheet" href="/Flag.css">
 </head>
 <body>
     <script src="js/flag.js"></script>
